whoami/3.deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: whoami
  namespace: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 2
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: dtomcej/whoami:tls
        args: ["-cert=/ssl/cert.pem", "-key=/ssl/key.pem", "-port=443"]
        ports:
        - containerPort: 443
          name: https
        volumeMounts:
        - name: certs
          mountPath: /ssl
      volumes:
      - emptyDir: {}
        name: certs
