whoami/4.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  rules:
  - host: traefik.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: https
